--- a/static/indexStyle.css
+++ b/static/indexStyle.css
@@ -3,25 +3,25 @@ body {
   }
 
 .bg-img {
-  background-image: url("/static/icons/mainPageImage.png");
+  background-image: url("/static/icons/newMap.png");
   height: 700px;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 50vw 100vh;  position: relative;
+  background-size: 70vw 100vh;  position: relative;
   background-color: #063433  ;
 }
   
-  .container {
+.container {
     position: absolute;
     margin: 20px;
     width: auto;
+    right: 0;
   }
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
-    display: flex; /* Use flexbox */
-    justify-content: flex-end; /* Align items to the right */
+    display: flex; 
+    justify-content: flex-end; 
   }
   
   .topnav a {
@@ -33,6 +33,7 @@ body {
   }
   
   .topnav a:hover {
-    background-color: #ddd;
-    color: teal;
+    color: white;
+    text-decoration: underline;
+    text-decoration-color: white; /* Specify underline color */
   }
