--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="topnav">
                   <a href="#home">Home</a>
-                  <a href="#Explore">Explore</a>
+                  <a href="/globe">Explore</a>
                   <a href="#Log In">Log In</a>
                   <a href="#about">About</a>
                 </div>
