fixed clicking problem

--- a/templates/globe.html
+++ b/templates/globe.html
@@ -33,10 +33,6 @@
           <b>${d.ADMIN} (${d.ISO_A2}):</b> <br />
         `)
 
-        
-        //.onPolygonHover(hoverD => world // change to on click
-        //  .polygonCapColor(d => d === hoverD ? 'steelblue' : colorScale(getVal(d)))
-        //)
 
         .onPolygonHover(hoveredPolygon => {
           if (!world.clickedPolygon || world.clickedPolygon !== hoveredPolygon) {
@@ -46,7 +42,7 @@
         .onPolygonClick(clickedPolygon => {
           world.clickedPolygon = clickedPolygon;
           const countryName = clickedPolygon.properties.ADMIN;
-          window.location.href = `templates/${countryName.toLowerCase().replace(/\s/g, '-')}.html`;
+          window.location.href = `${countryName.toLowerCase().replace(/\s/g, '-')}`;
         })
 
         .polygonsTransitionDuration(300)
