--- a/templates/globe.html
+++ b/templates/globe.html
@@ -1,52 +1,69 @@
 <head>
-  <style> body { margin: 0; } </style>
+  <style>
+    body {
+      margin: 0;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0, 0, 0);
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    .modal-content {
+      border-radius: 20px;
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 30%;
+      font-family: 'Consolas', monospace;
+    }
+
+    .close {
+      color: #aaa;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: black;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  </style>
 
   <script src="https://cdn.jsdelivr.net/npm/d3"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/globe.gl"></script>
-  <!--<script src="../../dist/globe.gl.js"></script>-->
+  <script src="static/globejs.js"></script>
 </head>
 
 <body>
   <div id="globeViz"></div>
 
-  <script>
-    var world;
-    const colorScale = d3.scaleSequentialSqrt(d3.interpolateViridis);
-    //other color scales: d3.interpolateViridis, d3.interpolateYlOrRd, d3.interpolateRdBu
-    // GDP per capita (avoiding countries with small pop)
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
 
-    const getVal = feat => feat.properties.GDP_MD_EST / Math.max(1e5, feat.properties.POP_EST);
-    fetch('https://raw.githubusercontent.com/vasturiano/globe.gl/master/example/datasets/ne_110m_admin_0_countries.geojson').then(res => res.json()).then(countries =>
-    {
-      const maxVal = Math.max(...countries.features.map(getVal));
-      colorScale.domain([0, maxVal]);
-      console.log(countries);
-      world = Globe()
-        .globeImageUrl('https://cdn.jsdelivr.net/npm/three-globe/example/img/earth-night.jpg')
-        .polygonsData(countries.features)
-        .polygonAltitude(0.05) // set higher
-        .polygonCapColor(feat => colorScale(getVal(feat)))
-        .polygonSideColor(() => 'rgba(0, 100, 0, 0.15)')
-        .polygonStrokeColor(() => '#111')
-        .polygonLabel(({ properties: d }) => `
-          <b>${d.ADMIN} (${d.ISO_A2}):</b> <br />
-        `)
-
-
-        .onPolygonHover(hoveredPolygon => {
-          if (!world.clickedPolygon || world.clickedPolygon !== hoveredPolygon) {
-            world.polygonCapColor(d => d === hoveredPolygon ? 'steelblue' : colorScale(getVal(d)));
-          }
-        })
-        .onPolygonClick(clickedPolygon => {
-          world.clickedPolygon = clickedPolygon;
-          const countryName = clickedPolygon.properties.ADMIN;
-          window.location.href = `${countryName.toLowerCase().replace(/\s/g, '-')}`;
-        })
-
-        .polygonsTransitionDuration(300)
-      (document.getElementById('globeViz'))
-    });
-  </script>
+      <div id="modal-text">
+        <label for="complexity">Complexity level:</label>
+        <select id="complexity" name="complexity">
+          <option value="Beginner">Beginner</option>
+          <option value="Intermediate">Intermediate</option>
+          <option value="Advanced">Advanced</option>
+        </select>
+      </div>
+    </div>
+  </div>
+  
 </body>
