--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,9 @@
                 </div>
               </div> 
         </div>
+        <div>
+            {% block content %} {% endblock %}
+        </div>
 
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
