--- a/templates/globe.html
+++ b/templates/globe.html
@@ -2,6 +2,38 @@
   <style>
     body {
       margin: 0;
+      font-family: 'Consolas', monospace;
+    }
+
+    #complexity {
+      font-family: 'Consolas', monospace;
+
+    }
+
+    #yearToExplore {
+      font-family: 'Consolas', monospace;
+    }
+
+    #modal-text {
+      padding-bottom: 10px;
+    }
+
+    #submitButtonContainer {
+      display: flex;
+      /* Enables flexbox */
+      justify-content: center;
+      /* Centers the child elements (the button) horizontally */
+      font-family: 'Consolas', monospace;
+      padding-top: 10px;
+      padding-bottom: 10px;
+    }
+
+    .firstInput {
+      padding-bottom: 10px;
+    }
+
+    .secondInput {
+      padding-bottom: 10px;
     }
 
     .modal {
@@ -23,8 +55,7 @@
       margin: 15% auto;
       padding: 20px;
       border: 1px solid #888;
-      width: 30%;
-      font-family: 'Consolas', monospace;
+      width: 20%;
     }
 
     .close {
@@ -54,8 +85,9 @@
   <div id="myModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-
-      <div id="modal-text">
+      <p id="modal-text">
+      </p>
+      <div class="firstInput">
         <label for="complexity">Complexity level:</label>
         <select id="complexity" name="complexity">
           <option value="Beginner">Beginner</option>
@@ -63,7 +95,14 @@
           <option value="Advanced">Advanced</option>
         </select>
       </div>
+      </br>
+      <div class="secondInput">
+        <label for="yearToExplore">Explore a year:</label>
+        <input type="number" id="yearToExplore" name="yearToExplore" min="1800" max="2020">
+      </div>
+      <div id="submitButtonContainer">
+        <input type="submit" id="submitButton" name="submitButton" value="Explore">
+      </div>
     </div>
   </div>
-  
 </body>
