--- a/templates/globe.html
+++ b/templates/globe.html
@@ -101,7 +101,7 @@
         <input type="number" id="yearToExplore" name="yearToExplore" min="1800" max="2020">
       </div>
       <div id="submitButtonContainer">
-        <input type="submit" id="submitButton" name="submitButton" value="Explore">
+        <input type="submit" id="submitButton" name="submitButton" value="Explore" onclick="displayInfo()">
       </div>
     </div>
   </div>
