--- a/templates/globe.html
+++ b/templates/globe.html
@@ -28,6 +28,20 @@
       padding-bottom: 10px;
     }
 
+    #fetchedContent {
+      display: none;
+      position: fixed;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      background-color: white;
+      border: 2px solid #000;
+      z-index: 9;
+      padding: 20px;
+      width: 50%;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    }
+
     .firstInput {
       padding-bottom: 10px;
     }
@@ -101,8 +115,9 @@
         <input type="number" id="yearToExplore" name="yearToExplore" min="1800" max="2020">
       </div>
       <div id="submitButtonContainer">
-        <input type="submit" id="submitButton" name="submitButton" value="Explore" onclick="displayInfo()">
+        <input type="submit" id="submitButton" name="submitButton" value="Explore">
       </div>
     </div>
   </div>
+  <div id="fetchedContent" class="fetchedContent"></div>
 </body>
