--- a/static/indexStyle.css
+++ b/static/indexStyle.css
@@ -14,6 +14,19 @@ body {
   background-color: #063433;
 }
 
+.logo img {
+  max-width: 150px; /* Adjust the maximum width as needed */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.logo {
+  position: absolute;
+  top: 35px; /* Adjust the distance from the top */
+  left: 20px; /* Adjust the distance from the left */
+  z-index: 2; /* Ensure it's above the black strip */
+}
+
+
 .container {
   margin: 20px auto;
   width: auto;
