--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,9 @@
     <title>TimeTapestry</title>
 </head>
 <body>
+<div class="logo">
+    <img src="/static/icons/glogo.png" alt="Logo">
+</div>
 <div class="black-strip">
     <div class="container">
         <h1 class="text-center text-white">Time Tapestry</h1>
