--- a/templates/globe.html
+++ b/templates/globe.html
@@ -28,20 +28,6 @@
       padding-bottom: 10px;
     }
 
-    #fetchedContent {
-      display: none;
-      position: fixed;
-      left: 50%;
-      top: 50%;
-      transform: translate(-50%, -50%);
-      background-color: white;
-      border: 2px solid #000;
-      z-index: 9;
-      padding: 20px;
-      width: 50%;
-      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    }
-
     .firstInput {
       padding-bottom: 10px;
     }
@@ -49,6 +35,29 @@
     .secondInput {
       padding-bottom: 10px;
     }
+
+    .fetched {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgb(0, 0, 0);
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    .fetchedContent {
+      border-radius: 20px;
+      background-color: #fefefe;
+      margin: 15% auto;
+      padding: 20px;
+      border: 1px solid #888;
+      width: 20%;
+    }
+
 
     .modal {
       display: none;
@@ -115,9 +124,22 @@
         <input type="number" id="yearToExplore" name="yearToExplore" min="1800" max="2020">
       </div>
       <div id="submitButtonContainer">
-        <input type="submit" id="submitButton" name="submitButton" value="Explore">
+        <input type="submit" id="submitButton" name="submitButton" value="Explore" onclick="toggleContentVisibility()">
       </div>
     </div>
   </div>
-  <div id="fetchedContent" class="fetchedContent"></div>
+  <div id="fetchedContent" class="fetchedContent" style="display: none;">
+    <p>The power in Japan transitioned from the imperial house to great clans over centuries, eventually leading to the
+      rise of military clans and samurai. The Minamoto clan emerged victorious in the Genpei War and established the
+      Kamakura shogunate. After facing two Mongol invasions, the shogunate was eventually overthrown in 1333, leading to
+      the Muromachi period. Daimy\u014d rose in power during this period, leading to civil wars. Oda Nobunaga and
+      Toyotomi Hideyoshi reunified Japan before Tokugawa Ieyasu became shogun and established the Tokugawa shogunate
+      during the Edo period. Contact with Portugal in 1543 led to the introduction of firearms and later opening up of
+      Japan in the Meiji era. Japan experienced rapid industrialization and modernization, leading to participation in
+      World War I and territorial expansion. The Taish\u014d era saw democratic developments, literary growth, and
+      economic growth, culminating in the reign of Emperor Akihito. The post World War II era was marked by economic
+      challenges and social issues, with ongoing tensions due to Japan's wartime legacy. Gender equality fluctuated over
+      centuries, with women's rights gradually improving over time.</p>
+  </div>
+  </div>
 </body>
